# ZPAD_LABS

./: README.md  lab3.ipynb
lab2/: README.md  lab2_part1.ipynb  lab2_part1_fixed.ipynb  lab2_part2.ipynb  requirements.txt
lab3/: README.md  requirements.txt
lab4/: README.md  laba4.py  requirements.txt
lab7/: CMakeLists.txt  README.md  build.sh  preinstall.sh
lab7/include/: FaceDetector.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab7/src/: CameraProvider.cpp  Display.cpp  FaceDetector.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
laba5/: README.md  laba5.py  requirements.txt
laba6/: CMakeLists.txt  README (1).md  README (2).md  README.md  preinstall.sh  run.sh
laba6/include/: CameraProvider.hpp  Display.hpp  FrameProcessor.hpp  KeyProcessor.hpp
laba6/src/: CameraProvider.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
